overflow fix

--- a/style.css
+++ b/style.css
@@ -3,75 +3,108 @@
     margin: 0;
     box-sizing: border-box;
 }
+body{
+    font-family: sans-serif;
+}
 
 .container {
     max-width: 1400px;
     margin: 0 auto;
 }
-
+.arrow-wrapper{
+    min-width: 1200px;
+    padding: 1px 0;
+}
 .arrow-wrapper .arrow-row {
     display: flex;
+    width: 100%;
     margin-bottom: 5px;
-   
+    overflow: hidden;
+}
+
+.arrow-wrapper .arrow-row:not(:last-child){
+    margin-bottom: 3px;
 }
 
 .arrow-wrapper .arrow-row .arrow-item {
-    background-color: #c4c4c4;
-    position: relative;
     width: calc(100% / 9);
-    text-align: center;
-    display: flex;
-    justify-content: center;
-}
-.arrow-wrapper .arrow-row .arrow-item .content{
     height: 50px;
+    position: relative;
+    display: flex;
+}
+
+.arrow-wrapper .arrow-row .arrow-item:last-child:not(:only-child) .arrow-block{
+    display: none;
+}
+
+.arrow-wrapper .arrow-row .arrow-item .content {
+    width: 100%;
+    height: 50px;
+
+    background: #C9C9C9;
+    padding: 0 25px;
     display: flex;
     align-items: center;
     justify-content: center;
-    text-align: center;
-    position: relative;
+    line-height: 1;
 }
-.arrow-wrapper .arrow-row .arrow-item .content::before{
-    width: 50px;
-    height: 50px;
-    background-color: #c4c4c4;
-    position: absolute;
-    content: '';
-    left: 0;
-    top: 0;
-    transform: translateX(-100%);
-    z-index: 1;
-}
-
-
-
-.arrow-item::before {
-    content: '';
-    display: inline-block;
-    position: absolute;
-    left: 3px;
-    width: 25px;
-    height: 50px;
-    clip-path: polygon(99% 45%, 0 0, 0 100%);
-    background-color: white;
-    transform: translateX(-100%);
-    z-index: 2;
-}
-
-.arrow-item::after {
-    content: '';
-    display: inline-block;
-    position: absolute;
-    right: 0;
-    top: 0;
-    /* transform: translateX(100%); */
-    width: 25px;
-    height: 50px;
-    clip-path: polygon(99% 45%, 0 0, 0 100%);
-    background-color: #c4c4c4;
-    z-index: 3;
-}
-.arrow-wrapper .arrow-row .arrow-item .content {
+.arrow-wrapper .arrow-row .arrow-item .content span{
+    font-size: 12px;
     max-width: 100px;
     text-align: center;
+    color: #525252;
+}
+
+.arrow-wrapper .arrow-row .arrow-item .arrow-block {
+    width: 50px;
+    height: 50px;
+    position: relative;
+    overflow: hidden;
+    position: absolute;
+    right: -32px;
+}
+
+
+.arrow-wrapper .arrow-row .arrow-item .arrow-block .arrow-right {
+    width: 40px;
+    height: 40px;
+    background: #C9C9C9;
+    /* box-shadow: 4px 4px 0 0 white; */
+    z-index: 100;
+    position: absolute;
+    border-width: 0 3px 3px 0;
+    border-style: solid;
+    border-color: white;
+    transform: translateY(-50%) rotate(-45deg);
+    border: 0 20px 20px 0 solid #C9C9C9;
+    left: 0;
+    top: 50%;
+}
+
+.arrow-wrapper .arrow-row--ribbon .arrow-item:first-child:before{
+    content: '';
+    width: 40px;
+    height: 40px;
+    background: white;
+    z-index: 100;
+    position: absolute;
+    border-width: 0 3px 3px 0;
+    border-style: solid;
+    border-color: white;
+    transform: translateY(-50%) rotate(-45deg);
+    border: 0 20px 20px 0 solid #C9C9C9;
+    left: -25px;
+    top: 50%;
+}
+.arrow-wrapper .arrow-row--right{
+    justify-content: flex-end;
+}
+.arrow-wrapper .arrow-row--center{
+    justify-content: center;
+}
+.arrow-wrapper .arrow-row .arrow-item ~ .arrow-item .content{
+    padding-right: 0;
+}
+.arrow-wrapper .arrow-row--ribbon .arrow-item .content{
+    padding-right: 0;
 }
